[project]
name = "my_ai_agents"
version = "0.1.0"
description = "my_ai_agents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
my_ai_agents = "my_ai_agents.main:run"
run_crew = "my_ai_agents.main:run"
train = "my_ai_agents.main:train"
replay = "my_ai_agents.main:replay"
test = "my_ai_agents.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
